parte final das alternativas e paginas  finalizada

--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Quiz App</title>
 </head>
+
 <body>
     <header>
         <div class="assunto">
@@ -24,11 +27,10 @@
     <main>
         <section class="pergunta">
             <p>Questão 6 de 10</p>
-
-            <h1></h1>
             <h1>Qual o significado de HTML?</h1>
 
             <div class="barra_progresso">
+            
 
             </div>
         </section>
@@ -37,12 +39,14 @@
             <form action="">
 
               <label for="alternativa_a">
+                <label for="alternativa_a">
                     <input type="radio" id="alternativa_a">
                     <div>
                         <span>A</span>
                         Hyper Trainer Marking Language
                     </div>
               </label>
+                </label>
 
               <label for="alternativa_b">
                 <input type="radio" id="alternativa_b">
@@ -51,13 +55,39 @@
                     Hyper Text Marketing Language
                 </div>
           </label>
+                <label for="alternativa_b">
+                    <input type="radio" id="alternativa_b">
+                    <div>
+                        <span>B</span>
+                        Hyper Text Marketing Language
+                    </div>
+                </label>
 
 
+                <label for="alternativa_c">
+                    <input type="radio" id="alternativa_c">
+                    <div>
+                        <span>C</span>
+                        Hyper Text Markup Language
+                    </div>
+                </label>
+
+                <label for="alternativa_d">
+                    <input type="radio" id="alternativa_d">
+                    <div>
+                        <span>D</span>
+                        Hyper Text Markup Leveler
+                    </div>
+                </label>
 
             </form>
+
+            <button>Enviar</button>
         </section>
 
+      
 
     </main>
 </body>
+
 </html>
