--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="quiz.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <title>Quiz App</title>
 </head>
 
@@ -27,34 +30,25 @@
     <main>
         <section class="pergunta">
             <p>Questão 6 de 10</p>
+
             <h1>Qual o significado de HTML?</h1>
+            <h2>Qual o significado de HTML?</h2>
 
             <div class="barra_progresso">
-            
 
+                <div></div>
             </div>
         </section>
 
         <section class="alternativas">
             <form action="">
-
-              <label for="alternativa_a">
                 <label for="alternativa_a">
                     <input type="radio" id="alternativa_a">
                     <div>
                         <span>A</span>
                         Hyper Trainer Marking Language
                     </div>
-              </label>
                 </label>
-
-              <label for="alternativa_b">
-                <input type="radio" id="alternativa_b">
-                <div>
-                    <span>B</span>
-                    Hyper Text Marketing Language
-                </div>
-          </label>
                 <label for="alternativa_b">
                     <input type="radio" id="alternativa_b">
                     <div>
@@ -62,8 +56,6 @@
                         Hyper Text Marketing Language
                     </div>
                 </label>
-
-
                 <label for="alternativa_c">
                     <input type="radio" id="alternativa_c">
                     <div>
@@ -71,7 +63,6 @@
                         Hyper Text Markup Language
                     </div>
                 </label>
-
                 <label for="alternativa_d">
                     <input type="radio" id="alternativa_d">
                     <div>
@@ -79,15 +70,9 @@
                         Hyper Text Markup Leveler
                     </div>
                 </label>
-
             </form>
-
             <button>Enviar</button>
         </section>
-
-      
-
     </main>
 </body>
-
 </html>
