--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -37,7 +37,7 @@
             <form action="">
 
                 <label for="alternativa_a">
-                    <input type="radio" id="alternativa_a">
+                <label for="alternativa_a" id="correta">
                     <input type="radio" id="alternativa_a"  name="alternativa">
                     <div>
                         <span>A</span>
@@ -46,25 +46,21 @@
                 </label>
 
                 <label for="alternativa_b">
-                    <input type="radio" id="alternativa_b">
+                <label for="alternativa_b" id="errada">
                     <input type="radio" id="alternativa_b" name="alternativa">
                     <div>
                         <span>B</span>
                         Hyper Text Marketing Language
                     </div>
                 </label>
-
                 <label for="alternativa_c">
-                    <input type="radio" id="alternativa_c">
                     <input type="radio" id="alternativa_c" name="alternativa">
                     <div>
                         <span>C</span>
                         Hyper Text Markup Language
                     </div>
                 </label>
-
                 <label for="alternativa_d">
-                    <input type="radio" id="alternativa_d">
                     <input type="radio" id="alternativa_d" name="alternativa">
                     <div>
                         <span>D</span>
