--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -9,7 +9,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <title>Quiz App</title>
 </head>
+
 <body>
+<body class="escuro">
     <header>
         <div class="assunto">
             <div class="assunto_icone">
@@ -27,16 +29,16 @@
     </header>
     <main>
         <section class="pergunta">
-            <p>Questão 6 de 10</p>
-            <h2>Qual o significado de HTML?</h2>
+           <div>
+                <p>Questão 6 de 10</p>
+                <h2>Qual o significado de HTML?</h2>
+           </div>
             <div class="barra_progresso">
                 <div></div>
             </div>
         </section>
         <section class="alternativas">
             <form action="">
-
-                <label for="alternativa_a">
                 <label for="alternativa_a" id="correta">
                     <input type="radio" id="alternativa_a"  name="alternativa">
                     <div>
@@ -44,8 +46,6 @@
                         Hyper Trainer Marking Language
                     </div>
                 </label>
-
-                <label for="alternativa_b">
                 <label for="alternativa_b" id="errada">
                     <input type="radio" id="alternativa_b" name="alternativa">
                     <div>
