--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <title>Quiz App</title>
 </head>
-<body >
 <body class="escuro">
+<body class="">
     <header>
         <div class="tema">
             <img src="./assets/images/icon-sun-dark.svg" alt="icone do sol">
@@ -59,5 +59,6 @@
             </button>
         </section>
     </main>
+    <a href="./pages/quiz/quiz.html">quiz</a>
 </body>
 </html>
