--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -10,8 +10,8 @@
     <title>Quiz App</title>
 </head>
 
-<body>
 <body class="escuro">
+<body class="">
     <header>
         <div class="assunto">
             <div class="assunto_icone">
